# MercTest

./: .gitignore  README.md  index.html  package-lock.json  package.json  powershell-commands.ps1  tsconfig.json
models/: Polilock.glb
rust-server/: Cargo.toml
rust-server/src/: main.rs
src/client/: animation.ts  main.ts  protocol.ts  styles.css
